--------------------------------------------------------------------------------
Fusion 1.210 - February 28th, 2004
--------------------------------------------------------------------------------

- 03-07-04: Added High Wizard Magic Crush. [Oatmeal]
- 03-07-04: Added Sniper Sniper Shot. [Oatmeal]
- 03-07-04: Fixed all aspects of Steal.  No, really.  Try it out. [Colus]
- 03-07-04: Added StealItem function. [Colus]
- 03-07-04: Added #icon and #unicon commands for testing. [Colus]
- 03-07-04: Fixed skill tree parsing for upper classes. [Colus]
- 03-06-04: FusionSQL -> Optimized Guild Preloading Algorithm. [AlexKreuz]
- 03-06-04: Added Lord Knight Berserk ASPD. [Oatmeal]
- 03-06-04: Added Lord Knight Fury Aspd. [Oatmeal]
- 03-06-04: Added High priest Assumptio.[Oatmeal]
- 03-06-04: FusionSQL -> Fixed Character data not saving bug. [AlexKreuz]
- 03-06-04: Added Palm Strike [Oatmeal]
- 03-06-04: Added Tiger Claw [Oatmeal]
- 03-06-04: Added Chain Crush [Oatmeal] 
- 03-06-04: Added Clown/Gypsy Vulcan Arrow [Oatmeal]
- 03-06-04: Added Assasin Cross Breaker skill [Oatmeal]
- 03-06-04: Added Falcon Assault [Oatmeal]
- 03-06-04: Added Paladin Skill Sacrafice [Oatmeal]
- 03-06-04: Added Paladin Skill Presure [Oatmeal]
- 03-06-04: Added Professor Skill HP Conversion (Values on skills arent 100% accurate). [Darkhelmet]
- 03-06-04: Added Professor Skill Soul Change. [Darkhelmet]
- 03-06-04: Added Professor Skill Soul Burn. [Darkhelmet]
- 03-06-04: FusionSQL -> Optimized Guild Loading Algorithm. [AlexKreuz]
- 03-06-04: FusionSQL -> Created Preload_GuildMembers. [AlexKreuz]
- 03-05-04: FusionSQL -> Created Load_Guilds. [AlexKreuz]
- 03-05-04: FusionSQL -> Optimized Pets Loading Algorithm. [AlexKreuz]
- 03-05-04: FusionSQL -> Created Load_Pets. [AlexKreuz]
- 03-05-04: FusionSQL -> Optimized Party Loading Algorithm. [AlexKreuz]
- 03-05-04: FusionSQL -> Created Load_Parties. [AlexKreuz]
- 03-05-04: Updated number of skills. [Colus]